# diveintocpp

./: .gitignore  CMakeLists.txt
include/: A.h  Collection.hpp
patterns/creational/: AbstractFactory.cpp  Builder.cpp  FactoryMethod.cpp
patterns/structural/: Adapter.cpp  Bridge.cpp
patterns/structural/logger/: Logger.cpp  Logger.h  LoggerImpl.cpp  LoggerImpl.h
src/: A.cpp  CMakeLists.txt
test/: A.test.cpp  CMakeLists.txt  Collection.test.cpp
